Update Press Release Page 2022-10-25

--- a/data/press_releases.yml
+++ b/data/press_releases.yml
@@ -585,3 +585,7 @@
 - title: "GitLab Inc. Launches Cloud Seed in Collaboration with Google Cloud to Bolster Cloud Adoption"
   link: /press/releases/2022-10-11-gitlab-inc-launches-cloud-seed.HTML
   date: 2022-10-11
+
+- title: "GitLab Security and Governance Solution Helps Secure Organizations’ End-to-End Software Supply Chains"
+  link: /press/releases/2022-10-25-gitlab-security-governance-solution-secure-software-supply-chain.html
+  date: 2022-10-25
