--- a/data/product_priorities.yml
+++ b/data/product_priorities.yml
@@ -25,7 +25,7 @@ security_policies:
     target_release: "15.7"
   - name: "License Approval Policies"
     url: "https://gitlab.com/groups/gitlab-org/-/epics/8092"
-    be_dri: ""
+    be_dri: "mparuszewski"
     fe_dri: farias-gl
     estimated_size: "M"
     target_release: "15.8"
