Bare capabilities for registry maintainers

--- a/data/team_members/person/h/hayleyswimelar.yml
+++ b/data/team_members/person/h/hayleyswimelar.yml
@@ -12,7 +12,7 @@ pronouns: she/her
 projects:
   gitlab: reviewer go
   container-registry:
-  - maintainer backend
+  - maintainer
   - reviewer database
   gitlab-pages: reviewer
 departments:
