--- a/data/team_members/person/j/joaopereira.yml
+++ b/data/team_members/person/j/joaopereira.yml
@@ -23,7 +23,7 @@ projects:
   - reviewer go
   - reviewer database
   container-registry:
-  - maintainer backend
+  - maintainer
   - reviewer database
   labkit: maintainer
 story: |
