Team Page Update - ND (Security)

--- a/data/team_members/person/n/ndevarajan.yml
+++ b/data/team_members/person/n/ndevarajan.yml
@@ -3,7 +3,7 @@ locality:
 country: Remote
 role: <a href="">Security Assurance Engineer</a>
 reports_to: tdilbeck
-picture: ../gitlab-logo-extra-whitespace.png
+picture: ND.jpg
 pronouns:
 pronunciation:
 twitter:
@@ -13,5 +13,5 @@ departments:
   - Security
 specialty: "Security Risk"
 expertise:
-story:
+story: Risk management, basketball, fitness, cycling, NFL/NBA (Pats/Cs)
 
