--- a/data/stages.yml
+++ b/data/stages.yml
@@ -2257,7 +2257,7 @@ stages:
           - Marcel van Remmerden
         uxr:
           - Will Leidheiser
-        tech_writer: Jonathan Glassman
+        tech_writer: Jon Glassman
         slack:
           channel: g_application_performance
         gitlab_group: gitlab-org/memory-team
@@ -2374,7 +2374,7 @@ stages:
           - Marcel van Remmerden
         uxr:
           - Will Leidheiser
-        tech_writer: Jonathan Glassman
+        tech_writer: Jon Glassman
         slack:
           channel: g_pods
         gitlab_group: TBD
