Add Firdaws as SSC for B&SM group

--- a/data/stages.yml
+++ b/data/stages.yml
@@ -1782,7 +1782,7 @@ stages:
         cm: Suri Patel
         backend_engineering_manager: Ragnar Hardarson
         frontend_engineering_manager: Ragnar Hardarson
-        support: TBD
+        support: Firdaws Farukh
         be_team_tag: TBD
         fe_team_tag: TBD
         appsec_engineer: TBD
