Add Felipe Artur as backend maintainer

--- a/data/team_members/person/f/felipe-a.yml
+++ b/data/team_members/person/f/felipe-a.yml
@@ -15,7 +15,7 @@ departments:
 - Plan:Certify BE Team
 projects:
   gitlab:
-  - trainee_maintainer backend
+  - maintainer backend
   gitlab-qa:
   - reviewer backend
 expertise: |
