--- a/data/team_members/person/l/liaquin.yml
+++ b/data/team_members/person/l/liaquin.yml
@@ -1,11 +1,11 @@
-name: Professional Services Project Manager 
+name: Lia Quinchia
 locality: 
 country: Remote
 role: <a href="">Professional Services Project Manager</a>
 reports_to: kevin-vogt
 picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
+pronouns: she/her
+pronunciation: 
 twitter:
 linkedin:
 gitlab: liaquin
@@ -13,5 +13,6 @@ departments:
   - Consulting Delivery
 specialty: "Sales"
 expertise:
-story:
+story: Lia is a Professional Services Project Manager with 4 years of experience working in the IT infrastructure space. In her spare time she enjoys cooking, being outdoors, watching documentaries, and reading. 
+
 
