Update pshutsin mentees.

--- a/data/maintainer_mentorship.yml
+++ b/data/maintainer_mentorship.yml
@@ -131,7 +131,8 @@
   domains:
     - backend
   max_trainees: 2
-  trainees: []
+  trainees:
+    - Pedro Pombeiro
 - mentor: Zack Cuddy
   gitlab: zcuddy
   domains:
