--- a/data/solution_children/join.yml
+++ b/data/solution_children/join.yml
@@ -5,7 +5,7 @@ parent_solution: open-source
 twitter_image: /images/opengraph/open-source-card.png
 header:
   title: Join the GitLab for Open Source Program
-  subtitle: GitLab Ultimate and 50,000 CI/CD minutes are free for qualifying open source projects.
+  subtitle: Features of [GitLab Ultimate](/pricing/ultimate/), including 50,000 CI/CD minutes, are free to qualifying open source projects.
   image: /images/solutions/open-source-partners-logo.svg
   buttons: 
     - button_text: Learn more
@@ -23,12 +23,7 @@ tracks:
     - heading: Program benefits
       icon_full: /images/icons/slp-agile.svg
       body: >-
-            Enroll in the GitLab for Open Source Program and receive:
-
-              * [GitLab Ultimate](https://about.gitlab.com/pricing/) (self-managed or SaaS) with unlimited seats per license
-
-              * 50,000 CI/CD minutes (users can [purchase 1,000 additional minutes](https://docs.gitlab.com/ee/ci/pipelines/cicd_minutes.html#purchase-additional-cicd-minutes) for a one-time, $8 fee)
-
+            Enroll in the GitLab for Open Source Program and receive features of [GitLab Ultimate](https://about.gitlab.com/pricing/), self-managed or SaaS, including 50,000 CI/CD minutes ([purchase 1,000 additional minutes](https://docs.gitlab.com/ee/ci/pipelines/cicd_minutes.html#purchase-additional-cicd-minutes) for a one-time, $8 fee).
 
     - heading: Requirements
       icon_full: /images/icons/slp-lock.svg
