--- a/data/team_members/person/s/shreyasagarwal.yml
+++ b/data/team_members/person/s/shreyasagarwal.yml
@@ -2,8 +2,8 @@
 name: Shreyas Agarwal
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer,
-  Fulfillment:Purchase</a>
+role: <a href="/job-families/engineering/development/management/fullstack-manager/">
+  Engineering Manager (Interim), Fulfillment:Purchase</a>
 reports_to: ragnar-hardarson
 picture: shreyasagarwal.jpg
 twitter:
