--- a/data/team_members/person/m/mitchell-nielsen.yml
+++ b/data/team_members/person/m/mitchell-nielsen.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/#distribution">Distribution
   Engineer, Distribution:Deploy</a>
-reports_to: david-mountney
+reports_to: plu8
 picture: mitchellnielsen.png
 twitter:
 gitlab: mnielsen
