--- a/data/team_members/person/h/hossein-p.yml
+++ b/data/team_members/person/h/hossein-p.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Distribution Engineer,
   Distribution:Deploy</a>
-reports_to: david-mountney
+reports_to: plu8
 picture: hosseinpursultani.png
 twitter:
 gitlab: pursultani
