--- a/data/team_members/vacancy/distribution-deploy-engineer.yml
+++ b/data/team_members/vacancy/distribution-deploy-engineer.yml
@@ -4,7 +4,7 @@ placeholder: true
 locality: Anywhere
 country: Remote
 role: <a href="/job-families/engineering/development/backend/#distribution">Distribution Engineer, Distribution:Deploy</a>
-reports_to: david-mountney
+reports_to: plu8
 picture: ../gitlab-logo-extra-whitespace.png
 twitter:
 gitlab:
